--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -194,6 +194,10 @@
     <Compile Include="Migrations\202009250710419_AddForeignKeyToGig.Designer.cs">
       <DependentUpon>202009250710419_AddForeignKeyToGig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010010730053_AddNameInIdentityUser.cs" />
+    <Compile Include="Migrations\202010010730053_AddNameInIdentityUser.Designer.cs">
+      <DependentUpon>202010010730053_AddNameInIdentityUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -296,6 +300,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202009250710419_AddForeignKeyToGig.resx">
       <DependentUpon>202009250710419_AddForeignKeyToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010010730053_AddNameInIdentityUser.resx">
+      <DependentUpon>202010010730053_AddNameInIdentityUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
