--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -178,9 +178,10 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\AttendencesController.cs" />
+    <Compile Include="Controllers\Api\FollowingsController.cs" />
+    <Compile Include="Controllers\Api\GigsController.cs" />
     <Compile Include="Controllers\ArtistController.cs" />
-    <Compile Include="Controllers\AttendencesController.cs" />
-    <Compile Include="Controllers\FollowingsController.cs" />
     <Compile Include="Controllers\GigsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -221,6 +222,14 @@
     <Compile Include="Migrations\202010031556538_AddFollowingsToDb.Designer.cs">
       <DependentUpon>202010031556538_AddFollowingsToDb.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010101247475_AddIsCancelledToGig.cs" />
+    <Compile Include="Migrations\202010101247475_AddIsCancelledToGig.Designer.cs">
+      <DependentUpon>202010101247475_AddIsCancelledToGig.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202010111457139_AddNotificationsAndUserNotificationsToDb.cs" />
+    <Compile Include="Migrations\202010111457139_AddNotificationsAndUserNotificationsToDb.Designer.cs">
+      <DependentUpon>202010111457139_AddNotificationsAndUserNotificationsToDb.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -232,6 +241,9 @@
     <Compile Include="Models\Gig.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Notification.cs" />
+    <Compile Include="Models\NotificationType.cs" />
+    <Compile Include="Models\UserNotification.cs" />
     <Compile Include="Models\ValidTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -247,6 +259,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -296,6 +309,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Gigs\Create.cshtml" />
     <Content Include="Views\Artist\Follow.cshtml" />
+    <Content Include="Views\Gigs\Mine.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -337,6 +351,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010031556538_AddFollowingsToDb.resx">
       <DependentUpon>202010031556538_AddFollowingsToDb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010101247475_AddIsCancelledToGig.resx">
+      <DependentUpon>202010101247475_AddIsCancelledToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010111457139_AddNotificationsAndUserNotificationsToDb.resx">
+      <DependentUpon>202010111457139_AddNotificationsAndUserNotificationsToDb.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
