--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -256,6 +256,7 @@
     <Compile Include="Models\ValidTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\GigDetailsViewModel.cs" />
     <Compile Include="ViewModels\GIgFormViewModel.cs" />
     <Compile Include="ViewModels\GigsViewModel.cs" />
   </ItemGroup>
@@ -322,6 +323,7 @@
     <Content Include="Views\Gigs\Create.cshtml" />
     <Content Include="Views\Artist\Follow.cshtml" />
     <Content Include="Views\Gigs\Mine.cshtml" />
+    <Content Include="Views\Gigs\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
