--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -254,7 +254,12 @@
     <Compile Include="Models\NotificationType.cs" />
     <Compile Include="Models\UserNotification.cs" />
     <Compile Include="Models\ValidTime.cs" />
+    <Compile Include="Persistance\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\AttendenceRepository.cs" />
+    <Compile Include="Repository\FollowRepository.cs" />
+    <Compile Include="Repository\GenreRepository.cs" />
+    <Compile Include="Repository\GigRepository.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\GigDetailsViewModel.cs" />
     <Compile Include="ViewModels\GIgFormViewModel.cs" />
